# packages/common/dist/versions/0.1.0/openApi.json
@@ -1222,7 +1222,7 @@
         ]
       }
     },
-    "/storageApi/v01/specimens": {
+    "/specimenApi/v01/specimens": {
       "post": {
         "operationId": "createSpecimen",
         "parameters": [],
@@ -1305,7 +1305,7 @@
         ]
       }
     },
-    "/storageApi/v01/specimens/{id}": {
+    "/specimenApi/v01/specimens/{id}": {
       "patch": {
         "operationId": "updateSpecimen",
         "parameters": [
@@ -1389,7 +1389,7 @@
         ]
       }
     },
-    "/storageApi/v01/specimens/{id}/relationships/physicalUnits": {
+    "/specimenApi/v01/specimens/{id}/relationships/physicalUnits": {
       "patch": {
         "operationId": "updateSpecimenPhysicalUnits",
         "parameters": [
@@ -1473,7 +1473,7 @@
         ]
       }
     },
-    "/storageApi/v01/specimens/{id}/versions/{versionId}": {
+    "/specimenApi/v01/specimens/{id}/versions/{versionId}": {
       "get": {
         "operationId": "getSpecimenVersion",
         "parameters": [
@@ -1521,7 +1521,7 @@
         ]
       }
     },
-    "/storageApi/v01/specimens/{id}/versions": {
+    "/specimenApi/v01/specimens/{id}/versions": {
       "get": {
         "operationId": "getSpecimenVersions",
         "parameters": [
@@ -3554,6 +3554,196 @@
               }
             }
           }
+        },
+        "example": {
+          "data": {
+            "type": "specimen",
+            "attributes": {
+              "individualGroup": {
+                "assignedTaxon": {},
+                "individualCircumstances": [
+                  {
+                    "id": "string",
+                    "collectorsText": "Bergström, U",
+                    "event": {
+                      "startDate": {
+                        "isoDate": "string",
+                        "dateText": "Before 1800",
+                        "day": 25,
+                        "month": 12,
+                        "year": 1981
+                      },
+                      "endDate": {
+                        "isoDate": "string",
+                        "dateText": "Before 1800",
+                        "day": 25,
+                        "month": 12,
+                        "year": 1981
+                      },
+                      "expeditionText": "Vega Expedition",
+                      "localityInformation": {
+                        "curatedLocalities": [
+                          {
+                            "name": "string",
+                            "versionId": "string",
+                            "createdAt": "string",
+                            "createdBy": "string",
+                            "updatedBy": "string",
+                            "updatedAt": "string",
+                            "id": "string",
+                            "description": "string",
+                            "relations": [
+                              {
+                                "id": "string",
+                                "type": "string"
+                              }
+                            ],
+                            "type": "continent",
+                            "centralPosition": {
+                              "latitude": "string",
+                              "longitude": "string",
+                              "geodeticDatum": "string",
+                              "uncertaintyInMeters": 0
+                            },
+                            "polygon": {
+                              "vertices": [
+                                null
+                              ]
+                            },
+                            "verticalPosition": {
+                              "maximumDepthInMeters": 0,
+                              "maximumElevationInMeters": 0,
+                              "minimumDepthInMeters": 0,
+                              "minimumElevationInMeters": 0
+                            }
+                          }
+                        ],
+                        "position": {
+                          "latitude": "string",
+                          "longitude": "string",
+                          "geodeticDatum": "string",
+                          "uncertaintyInMeters": 0
+                        },
+                        "polygon": {
+                          "vertices": [
+                            null
+                          ]
+                        },
+                        "verticalPosition": {
+                          "maximumDepthInMeters": 0,
+                          "maximumElevationInMeters": 0,
+                          "minimumDepthInMeters": 0,
+                          "minimumElevationInMeters": 0
+                        },
+                        "coordinatesVerbatim": "string",
+                        "georeferenceSourcesText": "string",
+                        "localityText": "string",
+                        "remarks": "string",
+                        "localityVerbatim": "string"
+                      }
+                    }
+                  }
+                ],
+                "featureObservations": [
+                  {
+                    "featureObservationAgent": "Doe, J.",
+                    "date": {
+                      "isoDate": "string",
+                      "dateText": "Before 1800",
+                      "day": 25,
+                      "month": 12,
+                      "year": 1981
+                    },
+                    "featureObservationText": "10 years",
+                    "featureObservationType": {
+                      "typeName": "string",
+                      "id": "string"
+                    },
+                    "methodText": "Known age"
+                  }
+                ],
+                "id": "string",
+                "identifiers": [
+                  {
+                    "publishRecord": true,
+                    "remarks": "Some remarks"
+                  }
+                ],
+                "identifiableUnits": [
+                  {
+                    "alternateIdentifiersText": "Skin complete, prepared",
+                    "identifiers": [
+                      {
+                        "publishRecord": true,
+                        "remarks": "Some remarks"
+                      }
+                    ],
+                    "collectingCircumstance": {
+                      "id": "string",
+                      "collectorsText": "Bergström, U",
+                      "event": {
+                        "startDate": {
+                          "isoDate": "string",
+                          "dateText": "Before 1800",
+                          "day": 25,
+                          "month": 12,
+                          "year": 1981
+                        },
+                        "endDate": {
+                          "isoDate": "string",
+                          "dateText": "Before 1800",
+                          "day": 25,
+                          "month": 12,
+                          "year": 1981
+                        },
+                        "expeditionText": "Vega Expedition",
+                        "localityInformation": {
+                          "position": {
+                            "latitude": "string",
+                            "longitude": "string",
+                            "geodeticDatum": "string",
+                            "uncertaintyInMeters": 0
+                          },
+                          "polygon": {
+                            "vertices": [
+                              null
+                            ]
+                          },
+                          "verticalPosition": {
+                            "maximumDepthInMeters": 0,
+                            "maximumElevationInMeters": 0,
+                            "minimumDepthInMeters": 0,
+                            "minimumElevationInMeters": 0
+                          },
+                          "coordinatesVerbatim": "string",
+                          "georeferenceSourcesText": "string",
+                          "localityText": "string",
+                          "remarks": "string",
+                          "localityVerbatim": "string"
+                        }
+                      }
+                    },
+                    "id": "string",
+                    "physicalUnitText": "Skin complete, prepared",
+                    "physicalUnit": {
+                      "id": "string",
+                      "identifiableUnits": [
+                        null
+                      ],
+                      "normalStorageLocationText": "string",
+                      "storedUnderTaxonName": "Sorex minutus",
+                      "storageLocation": {
+                        "id": "string",
+                        "locationText": "string"
+                      }
+                    }
+                  }
+                ],
+                "version": 0
+              },
+              "version": 0
+            }
+          }
         }
       },
       "updateSpecimenRequest": {
@@ -5299,7 +5489,7 @@
           "links": {
             "properties": {
               "self": {
-                "example": "https://domain/storageApi/v01/specimens",
+                "example": "https://domain/specimenApi/v01/specimens",
                 "format": "uri",
                 "type": "string",
                 "x-faker": "internet.url"
@@ -5343,7 +5533,7 @@
           "links": {
             "properties": {
               "self": {
-                "example": "https://domain/storageApi/v01/specimens/{id}",
+                "example": "https://domain/specimenApi/v01/specimens/{id}",
                 "format": "uri",
                 "type": "string",
                 "x-faker": "internet.url"
@@ -5391,7 +5581,7 @@
           "links": {
             "properties": {
               "self": {
-                "example": "https://domain/storageApi/v01/specimens/{id}/relationships/physicalUnits",
+                "example": "https://domain/specimenApi/v01/specimens/{id}/relationships/physicalUnits",
                 "format": "uri",
                 "type": "string",
                 "x-faker": "internet.url"
@@ -5439,7 +5629,7 @@
           "links": {
             "properties": {
               "self": {
-                "example": "https://domain/storageApi/v01/specimens/{id}/relationships/physicalUnits",
+                "example": "https://domain/specimenApi/v01/specimens/{id}/relationships/physicalUnits",
                 "format": "uri",
                 "type": "string",
                 "x-faker": "internet.url"
@@ -5489,7 +5679,7 @@
                       "links": {
                         "properties": {
                           "self": {
-                            "example": "https://domain/storageApi/v01/specimens/{id}/relationships/physicalUnits",
+                            "example": "https://domain/specimenApi/v01/specimens/{id}/relationships/physicalUnits",
                             "format": "uri",
                             "type": "string"
                           }
@@ -5515,7 +5705,7 @@
           "links": {
             "properties": {
               "self": {
-                "example": "https://domain/storageApi/v01/specimens/{id}",
+                "example": "https://domain/specimenApi/v01/specimens/{id}",
                 "format": "uri",
                 "type": "string",
                 "x-faker": "internet.url"
@@ -5567,7 +5757,7 @@
                         "links": {
                           "properties": {
                             "self": {
-                              "example": "https://domain/storageApi/v01/specimens/{id}/relationships/physicalUnits",
+                              "example": "https://domain/specimenApi/v01/specimens/{id}/relationships/physicalUnits",
                               "format": "uri",
                               "type": "string"
                             }
@@ -5595,7 +5785,7 @@
           "links": {
             "properties": {
               "self": {
-                "example": "https://domain/storageApi/v01/specimens",
+                "example": "https://domain/specimenApi/v01/specimens",
                 "format": "uri",
                 "type": "string",
                 "x-faker": "internet.url"
@@ -5645,7 +5835,7 @@
                       "links": {
                         "properties": {
                           "self": {
-                            "example": "https://domain/storageApi/v01/specimens/{id}/relationships/physicalUnits",
+                            "example": "https://domain/specimenApi/v01/specimens/{id}/relationships/physicalUnits",
                             "format": "uri",
                             "type": "string"
                           }
@@ -5671,7 +5861,7 @@
           "links": {
             "properties": {
               "self": {
-                "example": "https://domain/storageApi/v01/specimens/{id}/versions/{versionId}",
+                "example": "https://domain/specimenApi/v01/specimens/{id}/versions/{versionId}",
                 "format": "uri",
                 "type": "string",
                 "x-faker": "internet.url"
@@ -5723,7 +5913,7 @@
                         "links": {
                           "properties": {
                             "self": {
-                              "example": "https://domain/storageApi/v01/specimens/{id}/relationships/physicalUnits",
+                              "example": "https://domain/specimenApi/v01/specimens/{id}/relationships/physicalUnits",
                               "format": "uri",
                               "type": "string"
                             }
@@ -5751,7 +5941,7 @@
           "links": {
             "properties": {
               "self": {
-                "example": "https://domain/storageApi/v01/specimens/{id}/versions",
+                "example": "https://domain/specimenApi/v01/specimens/{id}/versions",
                 "format": "uri",
                 "type": "string",
                 "x-faker": "internet.url"
